--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" sizes="16x16" href="../src/assets/1x/icon.png" />
-        <link rel="icon" sizes="32x32" href="../src/assets/2x/icon.png" />
-        <link rel="icon" sizes="64x64" href="../src/assets/3x/icon.png" />
-        <link rel="icon" sizes="128x128" href="../src/assets/4x/icon.png" />
+        <link rel="icon" sizes="16x16" href="./favicon.ico" />
+        <link rel="icon" sizes="32x32" href="./favicon.ico" />
+        <link rel="icon" sizes="64x64" href="./favicon.ico" />
+        <link rel="icon" sizes="128x128" href="./favicon.ico" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
         crossorigin="anonymous">
